added tests for customer service